<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C8B257"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonColor"
        android:padding="10dp">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:srcCompat="@drawable/ic_library_books_white_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginTop="10dp"


            android:text="@string/selectTerm"/>

    </LinearLayout>


    <Button

        android:id="@+id/term1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term1"
        android:layout_marginTop="20dp"
        android:layout_weight="0.10"
        android:background="#663333"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:drawableTop="@drawable/hour_glass_1"/>

    <Button

        android:id="@+id/term2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term2"
        android:layout_marginTop="20dp"
        android:layout_weight="0.10"
        android:background="#313b3d"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:drawableTop="@drawable/hour_glass_2" />

    <Button

        android:id="@+id/term3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/term3"
        android:layout_marginTop="20dp"
        android:layout_weight="0.10"
        android:background="#e64442"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:drawableTop="@drawable/hour_glass_3"
        android:layout_marginBottom="20dp"/>
</LinearLayout>